# TaskManager

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
task_manager_api/: crud.py  database.py  exceptions.py  main.py  models.py  schemas.py
tests/: test_main.py
